--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+
+git_project.xcodeproj/project.xcworkspace/
